--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -44,3 +44,18 @@ table {
 	border-spacing: 0;
 }
 //-------------------------------------------------------------
+$red: #ffa9a9;
+$pink: #faa2c1;
+$grape: #e599f7;
+$violet: #b197fc;
+$indigo: #91a7ff;
+$blue: #74c0fc;
+$cyan: #66d9e8;
+$teal: #63e6be;
+$green: #8ce99a;
+$lime: #c0eb75;
+$yellow: #ffe066;
+$orange: #ffc078;
+$colorList: $red, $pink, $grape, $violet, $indigo, $blue, $cyan, $teal, $green, $lime, $yellow, $orange;
+
+@import './Main.scss';
