Add header, service logo

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -59,3 +59,4 @@ $orange: #ffc078;
 $colorList: $red, $pink, $grape, $violet, $indigo, $blue, $cyan, $teal, $green, $lime, $yellow, $orange;
 
 @import './Main.scss';
+@import './MainHeader.scss';
