--- a/src/style/_MainHeader.scss
+++ b/src/style/_MainHeader.scss
@@ -56,9 +56,48 @@
 
 .timer-container {
   position: absolute;
-  width: 100px;
-  height: 80%;
-  background-color: $red;
+  width: 200px;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(252, 252, 252, 0.411);
+  border-radius: 15px;
   top: 0;
   left: 50%;
+  margin-left: -100px;
+  margin-top: 10px;
+}
+
+.time {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+}
+
+.timer-buttons {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+@mixin buttons {
+  width: 100px;
+  background-color: rgba(155, 155, 155, 0.253);
+}
+
+.timer-plus {
+  @include buttons;
+}
+
+.timer-minus {
+  @include buttons;
+}
+
+.timer-start {
+  @include buttons;
 }
