[Client] <feature>: Add Files to Make MainFavoriteList
MainFav 컴포넌트를 작성하기 위한 사전준비

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -61,3 +61,4 @@ $colorList: $red, $pink, $grape, $violet, $indigo, $blue, $cyan, $teal, $green, 
 @import './Main.scss';
 @import './MainHeader.scss';
 @import './MainList.scss';
+@import './MainFav.scss';
