--- a/src/style/_MainHeader.scss
+++ b/src/style/_MainHeader.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100vw;
   height: 60px;
-  box-shadow: 1px 1px 5px 0.5px rgb(82, 82, 82);
+  box-shadow: 1px 1px 5px 0.5px rgba(82, 82, 82, 0.185);
 }
 
 .logo {
