[Client] <feature>: Add Selected Sound List
우상단에서 재생중인 소리 목록을 확인할 수 있습니다

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -64,3 +64,4 @@ $colorList: $red, $pink, $grape, $violet, $indigo, $blue, $cyan, $teal, $green, 
 @import './MainHeader.scss';
 @import './MainList.scss';
 @import './MainFav.scss';
+@import './MainSelected.scss';
