--- a/src/style/_MainSelected.scss
+++ b/src/style/_MainSelected.scss
@@ -17,6 +17,13 @@
   height: 300px;
   border-radius: 20px;
   right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  & p {
+    color: white;
+  }
 }
 
 .selectedButton {
@@ -44,3 +51,34 @@
   }
 }
 
+.list-container {
+  width: 85%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.list-single {
+  width: 100%;
+  height: 30px;
+  background-color: rgba(90, 90, 90, 0.301);
+  border-radius: 20px;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  & #img {
+    height: 15px;
+    width: 15px;
+    margin-left: 10px;
+  }
+  & p {
+    margin: 0 auto;
+  }
+  & #x {
+    height: 10px;
+    transform: rotate(45deg);
+    margin-right: 10px;
+  }
+}
