--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -46,18 +46,13 @@ table {
 }
 //-------------------------------------------------------------
 $red: #ffa9a9;
-$pink: #faa2c1;
-$grape: #e599f7;
 $violet: #b197fc;
-$indigo: #91a7ff;
 $blue: #74c0fc;
 $cyan: #66d9e8;
 $teal: #63e6be;
-$green: #8ce99a;
 $lime: #c0eb75;
 $yellow: #ffe066;
 $orange: #ffc078;
-$colorList: $red, $pink, $grape, $violet, $indigo, $blue, $cyan, $teal, $green, $lime, $yellow, $orange;
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 @import './Main.scss';
@@ -65,3 +60,4 @@ $colorList: $red, $pink, $grape, $violet, $indigo, $blue, $cyan, $teal, $green, 
 @import './MainList.scss';
 @import './MainFav.scss';
 @import './MainSelected.scss';
+@import './Signin_up.scss';
