[Client] <feature>: Add Timer ending page
설정한 타이머가 종료될 시 보여줄 컴포넌트를 제작하였습니다

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -61,3 +61,4 @@ $orange: #ffc078;
 @import './MainFav.scss';
 @import './MainSelected.scss';
 @import './Signin_up.scss';
+@import './Ending.scss';
