[Client] <feature>: Add Setting Modal
셋팅 모달창, 색상 및 다크모드 선택창을 추가하였습니다
색상변경 함수가 하나로 리팩토링되어 셋팅창에 적용되었습니다

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -62,3 +62,4 @@ $orange: #ffc078;
 @import './MainSelected.scss';
 @import './Signin_up.scss';
 @import './Ending.scss';
+@import './Setting.scss';
