--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,11 +1,3 @@
-<<<<<<< HEAD
-$awesomeRed: rgb(194, 79, 79);
-
-
-.App {
-  color: $awesomeRed;
-}
-=======
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -69,4 +61,10 @@ $orange: #ffc078;
 @import './MainFav.scss';
 @import './MainSelected.scss';
 @import './Signin_up.scss';
->>>>>>> 51f18e86af62ae230d8dfa48f0b5669076879974
+
+
+
+@import'./IntroMain';
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500&family=Noto+Sans+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500;800&family=Noto+Sans+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@900&family=Noto+Sans+KR&display=swap');
