[Client] feature: Add Intro_Fn1

--- a/src/style/_IntroMain.scss
+++ b/src/style/_IntroMain.scss
@@ -1,6 +1,7 @@
 .intro_Set{
   height: 100vh;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 
@@ -21,8 +22,7 @@
   position: relative;
   color:#F0EDCC;
   font-size: 50px;
-  font-family: 'Gothic A1', sans-serif;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Yusei Magic', sans-serif;
   left : 22vw;
   top: 6vh
 }
