--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -65,6 +65,9 @@ $orange: #ffc078;
 
 
 @import'./IntroMain';
+@import'./IntroFn1';
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500&family=Noto+Sans+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500;800&family=Noto+Sans+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@900&family=Noto+Sans+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@700&family=Gothic+A1:wght@900&family=Noto+Sans+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
