[Client] feature: Add Intro_Fn2

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -66,6 +66,7 @@ $orange: #ffc078;
 
 @import'./IntroMain';
 @import'./IntroFn1';
+@import'./IntroFn2';
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500&family=Noto+Sans+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500;800&family=Noto+Sans+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@900&family=Noto+Sans+KR&display=swap');
