--- a/src/style/_IntroFn1.scss
+++ b/src/style/_IntroFn1.scss
@@ -2,30 +2,7 @@
   background-color:  #F0EDCC;
 
 }
-.intro_Fn1_logo{
-  position: relative;
-  color:#02343F;
-  font-size: 50px;
-  font-family: 'Yusei Magic', sans-serif;
-  left : 22vw;
-  top: 6vh
-}
-.Fn1Komma{
-  width:6px;
-}
-.intro_Fn1_botton{
-  position:relative; 
-  width: 180px;
-  height: 60px;
-  font-size: 20px;
-  border-radius: 30px;
-  background-color: #02343F;
-  color:#F0EDCC ;
-  border: none; 
-  left: 67vw;
-  font-family: 'Gothic A1', sans-serif;
-  font-family: 'Noto Sans KR', sans-serif;
-}
+
 
 .intro_Fn1_body{
   display: flex;
@@ -44,17 +21,16 @@ top:15vh
   font-size: 90px;
   left:36vw;
   top:22vh;
-  color:  #02343F;
+  color:  #006064;
   font-family: 'Gothic A1', sans-serif;
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 900;
-
 }
 .intro_Fn1_description2{
   position: relative;
-  color:  #02343F;
+  color:  #006064;
   font-size: 20px;
   font-family: 'Gothic A1', sans-serif;
-  top: 57vh;
-  left: 13vw;
+  top: 58vh;
+  left: 11.5vw;
 }
