[Client] feature: Add Intro_Footter

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -68,6 +68,7 @@ $orange: #ffc078;
 @import'./IntroFn1';
 @import'./IntroFn2';
 @import'./IntroFn3';
+@import'./IntroFooter';
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500&family=Noto+Sans+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500;800&family=Noto+Sans+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@900&family=Noto+Sans+KR&display=swap');
