[Client] <fix>: Edit List Circle to Rotate by Mousewheel
원판에 커서를 올린 후 휠이벤트를 통해 회전이 가능합니다

--- a/src/style/_Main.scss
+++ b/src/style/_Main.scss
@@ -1,11 +1,10 @@
 @mixin randomColor {
-  position: relative;
+  position: fixed;
   display: flex;
   flex-direction: column;
   width: 100vw;
   height: 100vh;
   transition: all 5s;
-  z-index: 0;
 }
 
 .Main-red {
