--- a/src/style/_MainList.scss
+++ b/src/style/_MainList.scss
@@ -29,8 +29,7 @@
 .sound-list {
   position: absolute;
   @include on-circle($item-count: 30, $circle-size: 1200px, $item-size: 150px);
-  background-color: tomato;
-  //transform: rotate(90deg);
+  background-color: rgba(255, 99, 71, 0.001);
   border-radius: 50%;
   margin-left: -600px;
   left: 50vw;
@@ -40,7 +39,6 @@
 }
 
 .sound-card {
-  position: absolute;
   background-color: rgba(255, 255, 255, 0);
   height: 150px;
   border-radius: 0%;
@@ -54,5 +52,58 @@
   }
   & p {
     margin-top: 20px;
+  }
+}
+
+.tutorial {
+  position: absolute;
+  background-color: rgba(19, 19, 19, 0.808);
+  width: 350px;
+  height: 250px;
+  top: 500px;
+  left: 50vw;
+  margin-left: -175px;
+  border-radius: 50px;
+  z-index: 4;
+  transition: all 1.3s;
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  font-size: 27px;
+  transform: rotate(0deg);
+  & h1 {
+    margin-top: 15px;
+    margin-bottom: 10px;
+  }
+  & div {
+    width: 90%;
+    height: 70%;
+    display: flex;
+    & img {
+      height: 90%;
+    }
+  }
+  & .pointer {
+    position: absolute;
+    top: 115px;
+    height: 40px;
+    &.left {
+      left: 25px;
+      animation: blink 1.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) infinite forwards;
+    }
+    &.right {
+      right: 25px;
+      animation: blink 1.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) infinite forwards;
+    }
+    @keyframes blink {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 0.5;
+      }
+    }
   }
 }
