[Client] <feature>: Add Login, Logout, Signup, Get/Edit Userinfo Fn
인증과 유저정보 변경 관련 AJAX함수를 작성하였습니다
로그인, 로그아웃, 회원가입의 기능이 정상 작동합니다

--- a/src/style/_Setting.scss
+++ b/src/style/_Setting.scss
@@ -33,25 +33,49 @@
     width: 60%;
     margin-bottom: 20px;
     & .title {
+      font-weight: bold;
       margin-top: 30px;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
     }
     & .content {
       width: 100%;
       border: none;
       border-bottom: 1px solid skyblue;
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+  & .name-container {
+    width: 60%;
+    margin-bottom: 20px;
+    & .title {
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    & .content {
+      width: 100%;
+      border: none;
+      border-bottom: 1px solid skyblue;
+      &:focus {
+        outline: none;
+      }
     }
   }
   & .password-container {
     width: 60%;
     margin-bottom: 10px;
     & .title {
-      margin-bottom: 15px;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
     & .content {
       width: 100%;
       border: none;
       border-bottom: 1px solid skyblue;
+      &:focus {
+        outline: none;
+      }
     }
   }
   & .new-password-container {
@@ -61,6 +85,9 @@
       width: 100%;
       border: none;
       border-bottom: 1px solid skyblue;
+      &:focus {
+        outline: none;
+      }
     }
   }
   & .repeat-password-container {
@@ -70,6 +97,9 @@
       width: 100%;
       border: none;
       border-bottom: 1px solid skyblue;
+      &:focus {
+        outline: none;
+      }
     }
   }
 }
