--- a/src/style/_IntroFooter.scss
+++ b/src/style/_IntroFooter.scss
@@ -7,10 +7,9 @@
 .introFooter_description{
   position:relative; 
   font-size: 40px;
-  color:#428e92;
+  color:#2e7d32;
   left: 34vw;
-  font-family: 'Gothic A1', sans-serif;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Yusei Magic', sans-serif;
 }
 .introFooter_button{
   position:relative; 
@@ -18,11 +17,10 @@
   height: 60px;
   font-size: 20px;
   border-radius: 30px;
-  background-color: #428e92;
+  background-color: #2e7d32;
   color:#F0EDCC ;
   border: none;
   left: 13vw;
   top:8vh;
-  font-family: 'Gothic A1', sans-serif;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Yusei Magic', sans-serif;
 }
