--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -45,14 +45,14 @@ table {
 	border-spacing: 0;
 }
 //-------------------------------------------------------------
-$red: #ffa9a9;
-$violet: #b197fc;
-$blue: #74c0fc;
+$red: #c62828;
+$violet: #6a1b9a;
+$blue: #1565c0;
 $cyan: #66d9e8;
-$teal: #63e6be;
-$lime: #c0eb75;
-$yellow: #ffe066;
-$orange: #ffc078;
+$teal: #2e7d32;
+$lime: #b8c63f;
+$yellow: #dabc0e;
+$orange: #ff8f00;
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 @import './Main.scss';
@@ -69,8 +69,5 @@ $orange: #ffc078;
 @import'./IntroFn2';
 @import'./IntroFn3';
 @import'./IntroFooter';
-@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500&family=Noto+Sans+KR&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500;800&family=Noto+Sans+KR&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@900&family=Noto+Sans+KR&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@700&family=Gothic+A1:wght@900&family=Noto+Sans+KR&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
