--- a/src/style/_IntroFn1.scss
+++ b/src/style/_IntroFn1.scss
@@ -1,36 +1,54 @@
 .intro_Fn1{
-  background-color:  #F0EDCC;
-
+  height: 90h;
+ 
 }
-
-
-.intro_Fn1_body{
+.intro_body1{
+  background-color: #FBFBFD;
   display: flex;
-  height: 80vh;
-  overflow: hidden;
+  position: relative;
+  overflow:hidden;
+  width: 100vw;
+  height: 90vh;
+  margin-top: 10px;
 }
-.bodyKomma{
-position: relative;
-height: 500px;
-left: 20vw;
-top:15vh
+.imac{
+  position: absolute;
+  height: 700px;
+  left:145px;
+  top:130px;
+  z-index: 1;
 }
 
-.intro_Fn1_description{
+.windowcard1{
   position: relative;
-  font-size: 90px;
-  left:36vw;
-  top:22vh;
-  color:  #006064;
-  font-family: 'Gothic A1', sans-serif;
+  width: 1500px;
+  height: 500px;
+  z-index: 0;
+  top:150px;
+  left:100px;
+}
+.img_window{
+  position: absolute;
+  width: 810px;
+  height: 480px;
+  left:75px;
+  
+}
+.intro_Fn1_description{
+  position: absolute;
+  font-size: 70px;
+  left:1020px;
   font-family: 'Noto Sans KR', sans-serif;
-  font-weight: 900;
+  font-weight: 800;
+  top:100px;
+  color:#1D1E20;
+
 }
 .intro_Fn1_description2{
-  position: relative;
-  color:  #006064;
+  position: absolute;
   font-size: 20px;
-  font-family: 'Gothic A1', sans-serif;
-  top: 58vh;
-  left: 11.5vw;
+  top:400px;
+  left: 1020px;
+  font-family: 'Noto Sans KR', sans-serif;
+  color:#1D1E20;
 }
