--- a/src/style/_IntroFn2.scss
+++ b/src/style/_IntroFn2.scss
@@ -1,37 +1,179 @@
 .intro_Fn2{
-  background-color: #006064 ;
-}
-
-.intro_Fn2_body{
   display: flex;
-  height: 80vh;
-  overflow: hidden;
+  height: 71.5vh;
+
+}
+.intro_body2-1{
+  display: flex;
+  position: relative;
+  background-color: #FBFBFD;
+  margin-top: 15px;
+  height: 70vh;
+  width: 49vw;
+  margin-right: 7px;
+  margin-left: 15px;
+}
+.intro_body2-2{
+  display: flex;
+  position: relative;
+  background-color: black;
+  margin-top: 15px;
+  height: 70vh;
+  width: 49vw;
+  margin-left: 7px;
+  margin-right: 15px;
 }
 
-.bodyKomma2{
-  position: relative;
-  height: 500px;
-  left: 35vw;
-  top:15vh
-  }
+.fav-icons2{
+  position: absolute;
+  left:7.5vw;
+  width: 600px;
+  height: 35px;
+  top:40vh;
+}
+@mixin iconNav {
+  position: absolute;
+  display: block;
+  background-color: rgba(114, 114, 114, 0.192);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  margin-top: 5px;
+}
+@mixin iconNav2 {
+  position: absolute;
+  background-color: rgba(114, 114, 114, 0.192);
+  display: flex;
+  width: 100px;
+  height: 30px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
 
-  .intro_Fn2_description{
-    position: relative;
-    font-size: 90px;
-    left:22vw;
-    top:22vh;
-    color:  #F0EDCC;
-    font-family: 'Gothic A1', sans-serif;
-    font-family: 'Noto Sans KR', sans-serif;
-    font-weight: 900;
+}
+
+.fav-icons-desc2{
+  @include iconNav2;
+  color: white;
+  font-size: 18px;
+}
+.fav-icons-add2{
+  @include iconNav;
+  width: 25px;
+  height: 25px;
+  left: 530px;
+  cursor: pointer;
+  transition: all 0.5s;
+  & img {
+    width: auto;
+    height: 60%;
+  }
+  &:hover {
+    background-color: rgba(114, 114, 114, 0.418);
+  }
+}
+.fav-icons-delete2{
+  @include iconNav;
+  width: 25px;
+  height: 25px;
+  left: 580px;
+  cursor: pointer;
+  transition: all 0.5s;
+  & img {
+    width: auto;
+    height: 70%;
+  }
+  &:hover {
+    background-color: rgba(114, 114, 114, 0.418);
+  }
+}
+.fav-cards2{
+  position: absolute;
+  left: 7vw;
+  top:45vh;
+  width: 650px;
+  height: 115px;
+}
+
+.fav-single2{
   
+  width: 150px;
+  height: 100px;
+  background-color: rgba(255, 255, 255, 0.192);
+  border-radius: 20px;
+  margin-right: 10px;
+  margin-left: 5px;
+  margin-top: 5px;
+  transition: all 0.5s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  &:hover {
+    width: 160px;
+    height: 105px;
+    margin-top: 3px;
+    margin-left: -0.5px;
+    background-color: rgba(255, 255, 255, 0.438);
+    box-shadow: 2px 4px 7px 2px rgba(95, 95, 95, 0.11);
   }
-  .intro_Fn2_description2{
-    position: relative;
-    color:  #F0EDCC;
-    font-size: 20px;
-    font-family: 'Gothic A1', sans-serif;
-    font-family: 'Noto Sans KR', sans-serif;
-    top: 6vh;
+  & .checked {
+    width: 160px;
+    height: 105px;
+    margin-top: 3px;
+    margin-left: -0.5px;
+    background-color: rgba(255, 255, 255, 0.315);
+    box-shadow: 2px 4px 7px 2px rgba(95, 95, 95, 0.11);
+  }
+}
 
+.fav-img2{
+  width: 100%;
+  height: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  & img {
+    width: auto;
+    height: 65%;
   }
+}
+.fav-desc2{
+  color: white;
+}
+.intro_describe1{
+  position: absolute;
+  color:white;
+  font-size: 50px;
+  font-family: 'Noto Sans KR', sans-serif;
+  left: 378px;
+  top:100px;
+}
+.intro_describe1-2{
+  position: absolute;
+  color:white;
+  font-size: 17px;
+  top:180px;
+  left: 400px;
+  font-family: 'Noto Sans KR', sans-serif;
+}
+
+.intro_describe2{
+  position: absolute;
+  color:black;
+  font-size: 50px;
+  font-family: 'Noto Sans KR', sans-serif;
+  left: 340px;
+  top:100px;
+}
+.intro_describe2-2{
+  position: absolute;
+  color:black;
+  font-size: 17px;
+  top:180px;
+  left: 369px;
+  font-family: 'Noto Sans KR', sans-serif;
+}
