--- a/src/style/_MainSelected.scss
+++ b/src/style/_MainSelected.scss
@@ -12,7 +12,7 @@
 
 .selectedList {
   position: absolute;
-  background-color: rgba(85, 85, 85, 0.151);
+  background-color: rgba(151, 151, 151, 0.233);
   width: 200px;
   height: 300px;
   border-radius: 20px;
@@ -33,7 +33,7 @@
   top: 30px;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
-  background-color: rgba(110, 110, 110, 0.267);
+  background-color: rgba(134, 134, 134, 0.267);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -57,13 +57,14 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  overflow: auto;
 }
 
 .list-single {
   width: 100%;
   height: 30px;
-  background-color: rgba(90, 90, 90, 0.301);
-  border-radius: 20px;
+  background-color: rgba(161, 161, 161, 0.301);
+  border-radius: 10px;
   margin-top: 10px;
   display: flex;
   align-items: center;
@@ -80,5 +81,35 @@
     height: 10px;
     transform: rotate(45deg);
     margin-right: 10px;
+    cursor: pointer;
   }
+}
+
+.sound-bar-list {
+  //position: absolute;
+  width: 120px;
+  .slider-rail-list {
+    width: 70px;
+    height: 8px;
+    margin-left: 22px;
+    //background-color: rgba(255, 255, 255, 0.466);
+    border-radius: 2px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    cursor: pointer;
+  }
+  .slider-value-list {
+    width: 8px;
+    height: 8px;
+    background-color: white;
+    border-radius: 50%;
+  }
+  // .slider-value-list-default {
+  //   width: 8px;
+  //   height: 8px;
+  //   background-color: white;
+  //   border-radius: 50%;
+  //   opacity: 0.2;
+  // }
 }
