--- a/src/style/_IntroFn1.scss
+++ b/src/style/_IntroFn1.scss
@@ -1,22 +1,19 @@
 .intro_Fn1{
-  height: 90h;
+  height: 90vh;
  
 }
 .intro_body1{
   background-color: #dabc0e;
   display: flex;
   position: relative;
-
   height: 90vh;
-  margin-top: 15px;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin: 15px;
 }
 .imac{
   position: absolute;
-  height: 700px;
-  left:145px;
-  top:130px;
+  height: 85%;
+  left: 12%;
+  top: 16%;
   z-index: 1;
 }
 
