[Client] <Fix>: Edit playlist delete list button
이제 플레이리스트의 X버튼을 통해 음원 실행종료를 제어할 수 있습니다

--- a/src/style/_IntroFn1.scss
+++ b/src/style/_IntroFn1.scss
@@ -1,19 +1,22 @@
 .intro_Fn1{
-  height: 90vh;
+  height: 90h;
  
 }
 .intro_body1{
   background-color: #dabc0e;
   display: flex;
   position: relative;
+
   height: 90vh;
-  margin: 15px;
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 .imac{
   position: absolute;
-  height: 85%;
-  left: 12%;
-  top: 16%;
+  height: 700px;
+  left:145px;
+  top:130px;
   z-index: 1;
 }
 
