--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -47,16 +47,16 @@ table {
 }
 //-------------------------------------------------------------
 
-/*
-$red: #ffa9a9;
-$violet: #b197fc;
-$blue: #74c0fc;
-$cyan: #66d9e8;
-$teal: #63e6be;
-$lime: #c0eb75;
-$yellow: #ffe066;
-$orange: #ffc078;
-*/
+
+// $red: #ffa9a9;
+// $violet: #b197fc;
+$blue2: #74c0fc;
+// $cyan: #66d9e8;
+// $teal: #63e6be;
+// $lime: #c0eb75;
+// $yellow: #ffe066;
+// $orange: #ffc078;
+
 
 $red: #c62828;
 $violet: #6a1b9a;
