--- a/src/style/_MainHeader.scss
+++ b/src/style/_MainHeader.scss
@@ -60,13 +60,13 @@
   height: 70%;
   display: flex;
   flex-direction: column;
-  background-color: rgba(252, 252, 252, 0.411);
+  //background-color: rgba(252, 252, 252, 0.411);
   border-radius: 20px;
   top: 0;
   left: 50%;
   margin-left: -70px;
   margin-top: 10px;
-  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.075);
+  //box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.075);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,8 +78,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 22px;
-  color: rgb(70, 70, 70);
+  font-size: 25px;
+  text-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.644);
+  color: rgb(247, 247, 247);
 }
 
 .timer-buttons {
