--- a/src/style/_MainList.scss
+++ b/src/style/_MainList.scss
@@ -63,7 +63,7 @@
   background-color: rgba(19, 19, 19, 0.808);
   width: 350px;
   height: 250px;
-  top: 500px;
+  bottom: 5vh;
   left: 50vw;
   margin-left: -175px;
   border-radius: 50px;
