--- a/src/style/_MainSelected.scss
+++ b/src/style/_MainSelected.scss
@@ -69,9 +69,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  & #img {
-    height: 15px;
-    width: 15px;
+  & .soundimg {
+    height: 20px;
+    width: 20px;
     margin-left: 10px;
   }
   & p {
