--- a/src/style/_Signin_up.scss
+++ b/src/style/_Signin_up.scss
@@ -161,10 +161,10 @@
   height: 40px;
   margin-top: 10px;
   border-radius: 7px;
-  background-color: $blue;
+  background-color: $blue2;
   cursor: pointer;
   &:active {
-    background-color: darken($blue, 5%);
+    background-color: darken($blue2, 5%);
     box-shadow: inset 2px 2px 5px 1px rgba(0, 0, 0, 0.199);
   }
   &:focus {
@@ -181,7 +181,7 @@
   color: rgb(65, 65, 65);
   & p {
     margin-left: 5px;
-    color: $blue;
+    color: $blue2;
     font-size: 12px;
     cursor: pointer;
     font-weight: 900;
