[Client] feature : Add Fav Func

--- a/src/style/_IntroFn1.scss
+++ b/src/style/_IntroFn1.scss
@@ -11,9 +11,9 @@
 }
 .imac{
   position: absolute;
-  height: 85%;
-  left: 12%;
-  top: 16%;
+  height: 700px;
+  left: 140px;
+  top: 128px;
   z-index: 1;
 }
 
