--- a/src/style/_MainFav.scss
+++ b/src/style/_MainFav.scss
@@ -5,7 +5,7 @@
   height: 100vh;
   top: 0;
   left: 0;
-  
+
 }
 .fav-container {
   position: absolute;
@@ -16,6 +16,7 @@
   margin-left: -325px;
   display: flex;
   flex-direction: column;
+  
 }
 
 .fav-icons {
@@ -49,7 +50,14 @@
     background-color: rgba(255, 255, 255, 0.438);
     box-shadow: 2px 4px 7px 2px rgba(95, 95, 95, 0.11);
   }
-  & .checked {
+  &-active{
+    border-radius: 20px;
+    margin-right: 10px;
+    transition: all 0.5s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
     width: 160px;
     height: 105px;
     margin-top: 3px;
