--- a/src/style/_IntroFn1.scss
+++ b/src/style/_IntroFn1.scss
@@ -8,57 +8,58 @@
   position: relative;
 
   height: 90vh;
-  margin-top: 15px;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-top: 1.5vh;
+  margin-left: 0.8vw;
+  margin-right: 0.8vw;
 }
 .imac{
   position: absolute;
-  height: 700px;
-  left: 140px;
-  top: 128px;
+  height: 70vh;
+  width: 48vw;
+  left: 8vw;
+  top: 15vh;
   z-index: 1;
 }
 
 .windowcard1{
   position: relative;
-  width: 1500px;
-  height: 500px;
+  width: 88vw;
+  height: 50vh;
   z-index: 0;
-  top:150px;
-  left:100px;
+  top:15vh;
+  left:5vw;
 }
 .img_window{
   position: absolute;
-  width: 810px;
-  height: 480px;
-  left:75px;
+  width: 45vw;
+  height: 48vh;
+  left:4.5vw;
   
 }
 .intro_Fn1_description{
   position: absolute;
-  font-size: 70px;
-  left:1020px;
+  font-size: 4vw;
+  left:57vw;
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 800;
-  top:100px;
+  top: 10vh;
   color:#1D1E20;
 
 }
 .intro_Fn1_description2{
   position: absolute;
-  font-size: 20px;
-  top:400px;
-  left: 1020px;
+  font-size: 1.2vw;
+  top:40vh;
+  left: 57vw;
   font-family: 'Noto Sans KR', sans-serif;
   color:#1D1E20;
 }
 .controlcolor{
   position: absolute;
   background-color: #f0f0f2;
-  width: 48.9vw;
-  height: 60px;
-  left:49.56vw;
+  width: 48.8vw;
+  height: 5.5vh;
+  left:49.8vw;
   top:91.55vh;
 
 }
