--- a/src/style/_IntroFn2.scss
+++ b/src/style/_IntroFn2.scss
@@ -8,22 +8,21 @@
   display: flex;
   position: relative;
   background-color: #c62828;
-  margin-top: 15px;
+  margin-top: 1.5vh;
   height: 70vh;
   width: 49vw;
-  margin-right: 7px;
-  margin-left: 15px;
+  margin-right: 0.8vw;
+  margin-left: 0.8vw;
   overflow: hidden;
 }
 .intro_body2-2{
   display: flex;
   position: relative;
   background-color: #1565c0;
-  margin-top: 90px;
+  margin-top: 8.7vh;
   height: 70vh;
-  width: 49vw;
-  margin-left: 7px;
-  margin-right: 15px;
+  width: 48.87vw;
+
 }
 
 .fav-icons2{
@@ -39,14 +38,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 10px;
-  margin-top: 5px;
+  margin-left: 1vw;
+  margin-top: 1vh;
 }
 @mixin iconNav2 {
   position: absolute;
   background-color: rgba(114, 114, 114, 0.192);
   display: flex;
-  width: 100px;
+  width: 7vw;
   height: 30px;
   border-radius: 50%;
   justify-content: center;
