--- a/src/style/_IntroMain.scss
+++ b/src/style/_IntroMain.scss
@@ -38,7 +38,7 @@
 .intro_logo{
   position: relative;
   color:white;
-  font-size: 50px;
+  font-size: 2.3vw;
   font-family: 'Noto Sans KR', sans-serif;
   left : 17vw;
   top: 6vh;
@@ -53,7 +53,7 @@
 
 .description_Main{
   position: absolute;
-  font-size: 80px;
+  font-size: 4.5vw;
   width: 80vw;
   color: white;
   top: 23.5vh;
@@ -64,9 +64,9 @@
 
 .intro_Mainbutton{
   position: relative; 
-  width: 180px;
-  height: 60px;
-  font-size: 20px;
+  width: 10vw;
+  height: 6vh;
+  font-size: 1.1vw;
   border-radius: 30px;
   color: black;
   background-color:white ;
@@ -88,8 +88,8 @@
 
 .intro_next{
   position: absolute;
-  width: 50px;
-  height: 30px;
+  width: 3vw;
+  height: 3vh;
   bottom: 15vh;
   left: 48.5vw;
   top:77vh;
@@ -99,7 +99,7 @@
   position: relative;
   color: white;
   top:5vh;
-  font-size: 20px;
+  font-size: 1.4vw;
   font-family: 'Noto Sans KR', sans-serif;
 }
 .blank{
