--- a/src/style/_MainFav.scss
+++ b/src/style/_MainFav.scss
@@ -185,58 +185,139 @@
     box-shadow: inset 10px 0px 10px 0px $teal;
   }
 }
-.favModalBody{
+
+.fav_back {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.747);
-  z-index: 5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 4;
 }
-.favModalBox{
+
+.fav_back_one {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 17%;
+}
+
+.fav_back_two {
+  position: absolute;
+  top: 44%;
+  width: 100%;
+  height: 56%;
+}
+
+.fav_back_three {
+  position: absolute;
+  top: 17%;
+  width: 49%;
+  height: 26%;
+}
+
+.fav_back_four {
+  position: absolute;
+  top: 17%;
+  left: 76%;
+  width: 25%;
+  height: 26%;
+}
+
+
+
+.fav_modal{
  position: absolute;
- display: inline-flex;
- width: 45vw;
- height: 50vh;
+ left: 49%;
+ top: 17%;
+ display: flex;
+ justify-content: center;
+ width: 300px;
+ height: 200px;
  background-color: white;
  z-index: 5;
- flex-wrap: wrap; 
- align-content: flex-start;
- border-radius: 30px;
+ border-radius: 4px;
+ box-shadow: 1px 2px 20px 1px rgba(0, 0, 0, 0.253);
 }
+
+.fav_iconbox {
+  flex-wrap: wrap; 
+  align-content: flex-start;
+  width: 80%;
+  height: 46%;
+  margin-top: 11%;
+  box-shadow: inset 1px 1px 4px 1px rgba(0, 0, 0, 0.123);
+  overflow-y: auto;
+  border-radius: 3px;
+}
+
 .fav_icon{
-  height: 80px;
-  margin-left: 44px;
-  margin-top: 50px;
+  height: 30px;
+  margin-left: 23px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  opacity: 0.3;
 }
 
-.fav_icon1{
-  height: 80px;
-  margin-left: 44px;
-  margin-top: 50px;
+.fav_icon_active{
+  height: 30px;
+  margin-left: 23px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  opacity: 1;
 }
-
 
 .fav_x{
   position: absolute;
-  height: 25px;
-  right: 1vw;
-  top:1.4vh;
+  height: 10px;
+  right: 10px;
+  top: 10px;
+  cursor: pointer;
+  transform: rotate(45deg);
 }
+
 .fav_input{
   position: absolute;
-  font-size: 40px;
-  left:12vw;
-  top:32vh;
+  font-size: 15px;
+  margin-top: 47%;
+  border: none;
+  border-bottom: 0.5px solid $blue2;
+  left: 10%;
+  &:focus {
+    outline: none;
+  }
 }
+
 .fav_button{
   position: absolute;
-  font-size: 30px;
-  width: 100px;
-  top:43vh;
-  left:20vw;
+  font-size: 12px;
+  height: 20px;
+  width: 60px;
+  margin-top: 47%;
+  left: 70%;
+  border: none;
+  border-radius: 2px;
+  background-color: $blue2;
+  cursor: pointer;
+  &:active {
+    box-shadow: inset 1px 1px 3px 1px rgba(0, 0, 0, 0.274);
+    background-color: darken($color: $blue2, $amount: 10px);
+  }
+  &:focus {
+    outline: none;
+  }
+}
+
+.fav_error {
+  position: absolute;
+  bottom: 15px;
+  color: rgb(247, 63, 63);
+  left: 10%;
+  top: 85%;
+  font-size: 12px;
 }
 
 .fav_delet_x{
