--- a/src/style/_Main.scss
+++ b/src/style/_Main.scss
@@ -103,16 +103,16 @@ button {
 }
 
 @mixin wave {
-  opacity: .3;
+  opacity: .25;
   position: absolute;
-  top: 70%;
-  left: -45%;
+  top: 80%;
+  left: -180%;
   background: rgb(226, 226, 226);
-  width: 170vw;
-  height: 300vh;
-  transform-origin: 50% 48%;
+  width: 7000px;
+  height: 7000px;
+  transform-origin: 50% 50%;
   border-radius: 43%;
-  animation: drift 14000ms infinite linear;
+  animation: drift 15000ms infinite linear;
   transition: all 2s;
 }
 
@@ -123,11 +123,12 @@ button {
 .wave-two {
   @include wave;
   animation: drift 15000ms infinite linear;
-  opacity: .1;
+  opacity: .09;
   background-color: white;
-  left: -30%;
-  top: 67%;
-  border-radius: 39%;
+  transform-origin: 51% 51%;
+  left: -210%;
+  top: 72%;
+  border-radius: 42%;
 }
 
 @keyframes drift {
