[Client] <style>: Edit Main page mobile style
메인페이지의 모바일 반응형 스타일이 추가되었습니다

--- a/src/style/_Main.scss
+++ b/src/style/_Main.scss
@@ -40,39 +40,52 @@
   background-color: $violet;
 }
 .Main-random {
-  background-color: $orange;
+  box-shadow: none;
   @include randomColor;
-  &-1 {
-    background-color: $red;
-    @include randomColor;
+  animation: interval 100s infinite alternate-reverse;
+}
+
+$colors: $blue, $red, $orange, $teal, $cyan, $violet, $lime, $yellow;
+@keyframes interval {
+  10% {
+    $nth: nth($colors, random(8));
+      background-color: $nth;
   }
-  &-2 {
-    background-color: $orange;
-    @include randomColor;
+  20% {
+    $nth: nth($colors, random(8));
+      background-color: $nth;
   }
-  &-3 {
-    background-color: $blue;
-    @include randomColor;
+  30% {
+    $nth: nth($colors, random(8));
+      background-color: $nth;
   }
-  &-4 {
-    background-color: $yellow;
-    @include randomColor;
+  40% {
+    $nth: nth($colors, random(8));
+      background-color: $nth;
   }
-  &-5 {
-    background-color: $teal;
-    @include randomColor;
+  50% {
+    $nth: nth($colors, random(8));
+      background-color: $nth;
   }
-  &-6 {
-    background-color: $cyan;
-    @include randomColor;
+  60% {
+    $nth: nth($colors, random(8));
+      background-color: $nth;
   }
-  &-7 {
-    background-color: $violet;
-    @include randomColor;
+  70% {
+    $nth: nth($colors, random(8));
+      background-color: $nth;
   }
-  &-8 {
-    background-color: $lime;
-    @include randomColor;
+  80% {
+    $nth: nth($colors, random(8));
+      background-color: $nth;
+  }
+  90% {
+    $nth: nth($colors, random(8));
+      background-color: $nth;
+  }
+  100% {
+    $nth: nth($colors, random(8));
+      background-color: $nth;
   }
 }
 
@@ -134,6 +147,38 @@ button {
 @keyframes drift {
   from { transform: rotate(0deg); }
   from { transform: rotate(360deg); }
+}
+
+@media all and (max-width: 800px) {
+  
+  @mixin wave {
+    opacity: .25;
+    position: absolute;
+    top: 88%;
+    left: -750%;
+    background: rgb(226, 226, 226);
+    width: 7000px;
+    height: 7000px;
+    transform-origin: 50% 50%;
+    border-radius: 43%;
+    animation: drift 15000ms infinite linear;
+    transition: all 2s;
+  }
+  
+  .wave-one {
+    @include wave;
+  }
+  
+  .wave-two {
+    @include wave;
+    animation: drift 15000ms infinite linear;
+    opacity: .09;
+    background-color: white;
+    transform-origin: 50% 50%;
+    left: -850%;
+    top: 91%;
+    border-radius: 42.5%;
+  }
 }
 
 
