--- a/src/style/_MainSelected.scss
+++ b/src/style/_MainSelected.scss
@@ -105,11 +105,37 @@
     background-color: white;
     border-radius: 50%;
   }
-  // .slider-value-list-default {
-  //   width: 8px;
-  //   height: 8px;
-  //   background-color: white;
-  //   border-radius: 50%;
-  //   opacity: 0.2;
-  // }
+}
+
+@media all and (max-width: 800px) {
+  .selectedBar {
+    width: 90%;
+    height: 18%;
+    &.hide {
+      right: -311px;
+    }
+  }
+  .selectedList {
+    width: 85%;
+    left: 25px;
+    height: 100%;
+  }
+  .list-container {
+    width: 85%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    overflow-y: scroll;
+  }
+  .list-single {
+    width: 85%;
+    height: 30px;
+    background-color: rgba(161, 161, 161, 0.301);
+    border-radius: 10px;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
